[FIX] If the content of blog post cards are too big, they are passing the card size

--- a/front/scss/styles.css
+++ b/front/scss/styles.css
@@ -150,5 +150,5 @@ body {
 }
 
 .card {
-   @apply h-64
+   @apply min-h-64
 }
